Report shared bulk command permissions